objects/USA_Briefcase_Position__c.object
<CustomObject>
    <description>USA BRIEFCASE object
For USA Admin use.  Used to track roles of Briefcase users.  Typically, one user will be assigned to one role.</description>
    <fields>
        <fullName>Assigned_Markets__c</fullName>
        <label>Assigned Markets</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KPI_Level__c</fullName>
        <inlineHelpText>Indicate the level at which KPI details are reported.  I.e. when a user clicks on a KPI metric on the briefcase homepage, are the detail lines by region or by sales manager/team.</inlineHelpText>
        <label>Scorecard (KPI) Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>Sales Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Paid_by__c</fullName>
        <label>License Paid by:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pernod</fullName>
                    <default>true</default>
                    <label>Pernod</label>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Awaiting Approval</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Filled</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Account_Visit_Frequency__c</fullName>
        <label>Account Visit Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Frequently (4-5 days per week)</fullName>
                </value>
                <value>
                    <fullName>Moderately (1-3 days per week)</fullName>
                </value>
                <value>
                    <fullName>Sometimes (6-8 days per month)</fullName>
                </value>
                <value>
                    <fullName>Rarely (1-2 days per month)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Assigned_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Role in considered filled when resource is assigned to it.</inlineHelpText>
        <label>Assigned Resource</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>startsWith</operation>
                <value>USA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Briefcase_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USA_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Distributor__c</fullName>
        <label>Distributor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BADGER</fullName>
                </value>
                <value>
                    <fullName>CHARMER</fullName>
                </value>
                <value>
                    <fullName>GLAZERS</fullName>
                </value>
                <value>
                    <fullName>MAJOR BRANDS</fullName>
                </value>
                <value>
                    <fullName>MARTIGNETTI</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>RNDC</fullName>
                </value>
                <value>
                    <fullName>SWS</fullName>
                </value>
                <value>
                    <fullName>WIRTZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_EMail__c</fullName>
        <formula>USA_Assigned_Resource__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>E-Mail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Management_Level__c</fullName>
        <label>Management Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Portfolio Manager/RAS</fullName>
                </value>
                <value>
                    <fullName>Merchandiser</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_PR_Business_Unit__c</fullName>
        <label>PR Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spirits</fullName>
                </value>
                <value>
                    <fullName>Wines</fullName>
                </value>
                <value>
                    <fullName>Both Spirits and Wines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Premise_Assignment__c</fullName>
        <label>Premise Assignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On-Premise</fullName>
                </value>
                <value>
                    <fullName>Off-Premise</fullName>
                </value>
                <value>
                    <fullName>Both On and Off-Premise</fullName>
                </value>
                <value>
                    <fullName>Chains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Reports_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reports to</label>
        <referenceTo>USA_Briefcase_Position__c</referenceTo>
        <relationshipLabel>Positions that report to this one</relationshipLabel>
        <relationshipName>Briefcase_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USA_Salesforce_Profile__c</fullName>
        <formula>USA_Assigned_Resource__r.Profile.Name</formula>
        <label>Salesforce Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Salesforce_Role__c</fullName>
        <formula>USA_Assigned_Resource__r.UserRole.Name</formula>
        <label>Salesforce Role</label>
        <type>Text</type>
    </fields>
    <label>Briefcase Position</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>USA_Category__c</columns>
        <columns>USA_EMail__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>USA_Reports_to__c</columns>
        <columns>USA_Management_Level__c</columns>
        <columns>USA_PR_Business_Unit__c</columns>
        <columns>USA_Premise_Assignment__c</columns>
        <columns>USA_Salesforce_Profile__c</columns>
        <columns>USA_Salesforce_Role__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Filled</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>USA_Category__c</columns>
        <columns>USA_EMail__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>USA_Reports_to__c</columns>
        <columns>USA_Management_Level__c</columns>
        <columns>USA_PR_Business_Unit__c</columns>
        <columns>USA_Premise_Assignment__c</columns>
        <columns>USA_Salesforce_Profile__c</columns>
        <columns>USA_Salesforce_Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Filled</value>
        </filters>
        <label>Filled</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Open</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>USA_Category__c</columns>
        <columns>USA_EMail__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>USA_Reports_to__c</columns>
        <columns>USA_Management_Level__c</columns>
        <columns>USA_PR_Business_Unit__c</columns>
        <columns>USA_Premise_Assignment__c</columns>
        <columns>USA_Salesforce_Profile__c</columns>
        <columns>USA_Salesforce_Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Open</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Briefcase Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>